force-app/main/default/objects/Quote/fields/Auto_Approved__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates if the quote will be automatically approved in an approval process</description>
    <label>Auto Approved?</label>
    <type>Checkbox</type>
</CustomField>