force-app/main/default/objects/Quote/fields/BSA__c.field-meta.xml
<CustomField>
    <fullName>BSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CDEV Product Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>