force-app/main/default/objects/Quote/fields/Commissions_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Amount__c</fullName>
    <formula>IF((Opportunity.Opportunity_Record_Type_V2__c = &apos;Reseller&apos;||Opportunity.Opportunity_Record_Type_V2__c =&apos;Standard&apos;||Opportunity.Opportunity_Record_Type_V2__c =&apos;AC Trial&apos;) &amp;&amp;  (Term_Length__c =1 ||  ISBLANK( Term_Length__c )||Term_Length__c=0)  , (0.09* Software_Amount__c )+(0.03* Consulting_Amount__c ),
IF((Opportunity.Opportunity_Record_Type_V2__c = &apos;Reseller&apos;||Opportunity.Opportunity_Record_Type_V2__c =&apos;Standard&apos;||Opportunity.Opportunity_Record_Type_V2__c =&apos;AC Trial&apos;) &amp;&amp;  (Term_Length__c =2), (0.108* Software_Amount__c )+(0.03* Consulting_Amount__c ),
IF((Opportunity.Opportunity_Record_Type_V2__c = &apos;Reseller&apos;||Opportunity.Opportunity_Record_Type_V2__c =&apos;Standard&apos;||Opportunity.Opportunity_Record_Type_V2__c =&apos;AC Trial&apos;) &amp;&amp;  (Term_Length__c =3),(0.135* Software_Amount__c )+(0.03* Consulting_Amount__c ) , 0.00) )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissions Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>