force-app/main/default/objects/Quote/fields/Consulting_Amount__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Amount__c</fullName>
    <label>Consulting Amount</label>
    <summarizedField>QuoteLineItem.Total_Price_Custom__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Product_family_Custom__c</field>
        <operation>equals</operation>
        <value>SERVICES</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>