force-app/main/default/objects/Quote/fields/Contract_Terms__c.field-meta.xml
<CustomField>
    <fullName>Contract_Terms__c</fullName>
    <formula>Contract_End_Date__c -  Contract_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>