force-app/main/default/objects/Quote/fields/Created_Date2__c.field-meta.xml
<CustomField>
    <fullName>Created_Date2__c</fullName>
    <formula>TEXT( MONTH(  DATEVALUE(CreatedDate ) ) ) &amp; &quot;/&quot; &amp; TEXT( DAY( DATEVALUE(CreatedDate ) ) ) &amp; &quot;/&quot; &amp; TEXT( YEAR( DATEVALUE(CreatedDate )) )</formula>
    <label>Created Date2</label>
    <type>Text</type>
</CustomField>