force-app/main/default/objects/Quote/fields/Custom_Commissions_Amount__c.field-meta.xml
<CustomField>
    <fullName>Custom_Commissions_Amount__c</fullName>
    <formula>IF( Opportunity.Opportunity_Record_Type_V2__c = &apos;Custom&apos;, (0.03* Custom_Amount__c ), 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Commissions Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>