force-app/main/default/objects/Quote/fields/Custom_Discount__c.field-meta.xml
<CustomField>
    <fullName>Custom_Discount__c</fullName>
    <label>Custom Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>