force-app/main/default/objects/Quote/fields/Custom_Discount_Work_Description_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Custom_Discount_Work_Description_Rollup__c</fullName>
    <label>Custom Discount Work Description Rollup</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>