force-app/main/default/objects/Quote/fields/Discount_Price__c.field-meta.xml
<CustomField>
    <fullName>Discount_Price__c</fullName>
    <label>Discount Price</label>
    <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Product_Code_rollup__c</field>
        <operation>equals</operation>
        <value>CST00011</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>