force-app/main/default/objects/Quote/fields/Discount_Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>Discount_Price_Formula__c</fullName>
    <formula>IF( Discount_Price__c = 0.00, NULL,  Discount_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Price Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>