force-app/main/default/objects/Quote/fields/Discount_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>Discount_Prior_Value__c</fullName>
    <label>DEPRECATE Discount Prior Value</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>