force-app/main/default/objects/Quote/fields/Discount_Ref__c.field-meta.xml
<CustomField>
    <fullName>Discount_Ref__c</fullName>
    <formula>Discount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount_Ref</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>