force-app/main/default/objects/Quote/fields/Discount_Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Discount_Term_Length__c</fullName>
    <defaultValue>00.00</defaultValue>
    <label>Discount Term Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>