force-app/main/default/objects/Quote/fields/Discount_Term_Prior__c.field-meta.xml
<CustomField>
    <fullName>Discount_Term_Prior__c</fullName>
    <label>DEPRECATE Discount Term Prior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>