force-app/main/default/objects/Quote/fields/Discount_Years__c.field-meta.xml
<CustomField>
    <fullName>Discount_Years__c</fullName>
    <label>Discount Years</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
                <default>true</default>
                <label>1 Year</label>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>