force-app/main/default/objects/Quote/fields/DML_Code__c.field-meta.xml
<CustomField>
    <fullName>DML_Code__c</fullName>
    <label>DML Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>