force-app/main/default/objects/Quote/fields/Environment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Environment_Notes__c</fullName>
    <description>Details regarding customer environment for custom quoting</description>
    <inlineHelpText>Details regarding customer environment for custom quoting</inlineHelpText>
    <label>Environment Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>