force-app/main/default/objects/Quote/fields/Is_Discount_Forever__c.field-meta.xml
<CustomField>
    <fullName>Is_Discount_Forever__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Discount Forever</label>
    <type>Checkbox</type>
</CustomField>