force-app/main/default/objects/Quote/fields/Is_Discount_Forever_Prior__c.field-meta.xml
<CustomField>
    <fullName>Is_Discount_Forever_Prior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEPRECATE Is Discount Forever Prior</label>
    <type>Checkbox</type>
</CustomField>