force-app/main/default/objects/Quote/fields/Is_Discount_Forever_Text__c.field-meta.xml
<CustomField>
    <fullName>Is_Discount_Forever_Text__c</fullName>
    <formula>IF(Is_Discount_Forever__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
    <label>Is Discount Forever Text</label>
    <type>Text</type>
</CustomField>