force-app/main/default/objects/Quote/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <inlineHelpText>Used as the &quot;Lead Time&quot; field on the top of the Quote</inlineHelpText>
    <label>Lead Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Continuation of Project</fullName>
            </value>
            <value>
                <fullName>1-2 Days</fullName>
            </value>
            <value>
                <fullName>2 weeks</fullName>
                <label>2 Weeks</label>
            </value>
            <value>
                <fullName>4 weeks</fullName>
                <label>4 Weeks</label>
            </value>
            <value>
                <fullName>6 weeks</fullName>
                <label>6 Weeks</label>
            </value>
            <value>
                <fullName>8 weeks</fullName>
                <label>8 Weeks</label>
            </value>
            <value>
                <fullName>10 weeks</fullName>
                <label>10 Weeks</label>
            </value>
            <value>
                <fullName>12 weeks</fullName>
                <label>12 Weeks</label>
            </value>
            <value>
                <fullName>14 weeks</fullName>
            </value>
            <value>
                <fullName>16 weeks</fullName>
                <label>16 Weeks</label>
            </value>
            <value>
                <fullName>18 weeks</fullName>
            </value>
            <value>
                <fullName>20 weeks</fullName>
                <label>20 Weeks</label>
            </value>
            <value>
                <fullName>22 Weeks</fullName>
            </value>
            <value>
                <fullName>24 Weeks</fullName>
                <label>24 weeks</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>