force-app/main/default/objects/Quote/fields/Most_Recent_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Attachment__c</fullName>
    <label>Most Recent Attachment</label>
    <type>DateTime</type>
</CustomField>