force-app/main/default/objects/Quote/fields/Most_Recent_Attachment_Formula__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Attachment_Formula__c</fullName>
    <formula>DATEVALUE( Most_Recent_Attachment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Attachment Formula</label>
    <type>Date</type>
</CustomField>