force-app/main/default/objects/Quote/fields/Number_of_Quotes_Generated__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Quotes_Generated__c</fullName>
    <inlineHelpText>Determines the V number on the next quote generated.  It will be this number + 1. You do not need to manually edit this field.</inlineHelpText>
    <label>Number of Quotes Generated</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>