force-app/main/default/objects/Quote/fields/OLD_Total_Software_Discount__c.field-meta.xml
<CustomField>
    <fullName>OLD_Total_Software_Discount__c</fullName>
    <label>OLD Total Software Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>