force-app/main/default/objects/Quote/fields/Old_Total_Software_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Old_Total_Software_Subtotal__c</fullName>
    <label>OLD Total Software Subtotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>