force-app/main/default/objects/Quote/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <formula>Opportunity.Name</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>