force-app/main/default/objects/Quote/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <formula>Opportunity.Owner.FirstName +&quot; &quot;+ Opportunity.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>