force-app/main/default/objects/Quote/fields/Partner_City__c.field-meta.xml
<CustomField>
    <fullName>Partner_City__c</fullName>
    <formula>Opportunity.Partner__r.ShippingCity</formula>
    <label>Partner City</label>
    <type>Text</type>
</CustomField>