force-app/main/default/objects/Quote/fields/Partner_Country__c.field-meta.xml
<CustomField>
    <fullName>Partner_Country__c</fullName>
    <formula>Opportunity.Partner__r.ShippingCountry</formula>
    <label>Partner Country</label>
    <type>Text</type>
</CustomField>