force-app/main/default/objects/Quote/fields/Partner_Margin__c.field-meta.xml
<CustomField>
    <fullName>Partner_Margin__c</fullName>
    <formula>Opportunity.Is_Coupon_Applied__c</formula>
    <label>Partner Margin</label>
    <type>Checkbox</type>
</CustomField>