force-app/main/default/objects/Quote/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <formula>Opportunity.Partner__r.Name</formula>
    <label>Partner Name</label>
    <type>Text</type>
</CustomField>