force-app/main/default/objects/Quote/fields/Partner_State__c.field-meta.xml
<CustomField>
    <fullName>Partner_State__c</fullName>
    <formula>Opportunity.Partner__r.ShippingState</formula>
    <label>Partner State</label>
    <type>Text</type>
</CustomField>