force-app/main/default/objects/Quote/fields/Partner_Street__c.field-meta.xml
<CustomField>
    <fullName>Partner_Street__c</fullName>
    <formula>Opportunity.Partner__r.ShippingStreet</formula>
    <label>Partner Street</label>
    <type>Text</type>
</CustomField>