force-app/main/default/objects/Quote/fields/Partner_Zip__c.field-meta.xml
<CustomField>
    <fullName>Partner_Zip__c</fullName>
    <formula>Opportunity.Partner__r.ShippingPostalCode</formula>
    <label>Partner Zip</label>
    <type>Text</type>
</CustomField>