force-app/main/default/objects/Quote/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <formula>Opportunity.Payment_Terms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>