force-app/main/default/objects/Quote/fields/PM_Service__c.field-meta.xml
<CustomField>
    <fullName>PM_Service__c</fullName>
    <label>PM Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>15</fullName>
                <default>true</default>
                <label>15</label>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>