force-app/main/default/objects/Quote/fields/Project_Reference__c.field-meta.xml
<CustomField>
    <fullName>Project_Reference__c</fullName>
    <formula>Opportunity.Name</formula>
    <label>Project Reference</label>
    <type>Text</type>
</CustomField>