force-app/main/default/objects/Quote/fields/Quote_Contact__c.field-meta.xml
<CustomField>
    <fullName>Quote_Contact__c</fullName>
    <formula>IF( NOT( ISBLANK(ContactId) ) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Contact?</label>
    <type>Checkbox</type>
</CustomField>