force-app/main/default/objects/Quote/fields/Quote_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number_Formula__c</fullName>
    <description>This field is used for clm system</description>
    <formula>QuoteNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Number Formula</label>
    <type>Text</type>
</CustomField>