force-app/main/default/objects/Quote/fields/Software_Amount__c.field-meta.xml
<CustomField>
    <fullName>Software_Amount__c</fullName>
    <label>Software Amount</label>
    <summarizedField>QuoteLineItem.Total_Price_Custom__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Product_family_Custom__c</field>
        <operation>equals</operation>
        <value>ANALYTICS CLOUD,CLOUD_PRODUCTS,DESKTOP_ENHANCEMENT,DESKTOP_PRODUCTS,DESKTOP_SPLA,DESKTOP_SUBSCRIPTION,DISTRIBUTION_CLOUD,INTELLIGENCE,SALESPAD_SUBSCRIPTION</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>