force-app/main/default/objects/Quote/fields/Software_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Software_Subtotal__c</fullName>
    <label>Software Subtotal</label>
    <summarizedField>QuoteLineItem.Extended_Price__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Product_Code_rollup__c</field>
        <operation>notContain</operation>
        <value>SRV00001</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>