force-app/main/default/objects/Quote/fields/Sol_Discount__c.field-meta.xml
<CustomField>
    <fullName>Sol_Discount__c</fullName>
    <formula>IF(  Discount  = 0, NULL , TotalPrice  *  Discount)</formula>
    <label>Sol Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>