force-app/main/default/objects/Quote/fields/SoW_Next_Version__c.field-meta.xml
<CustomField>
    <fullName>SoW_Next_Version__c</fullName>
    <formula>SoW_Version__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SoW Next Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>