force-app/main/default/objects/Quote/fields/SoW_Version__c.field-meta.xml
<CustomField>
    <fullName>SoW_Version__c</fullName>
    <defaultValue>1</defaultValue>
    <label>SoW Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>