force-app/main/default/objects/Quote/fields/Total_Service_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Sales_Price__c</fullName>
    <label>Total Service Sales Price</label>
    <summarizedField>QuoteLineItem.Extended_Price__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Business_Line__c</field>
        <operation>equals</operation>
        <value>Professional Services</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>