force-app/main/default/objects/Quote/fields/Total_Service_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Subtotal__c</fullName>
    <formula>Total_Service_Sales_Price__c + Total_Service_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Service Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>