force-app/main/default/objects/Quote/fields/Total_Software_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Total_Software_Subtotal__c</fullName>
    <formula>Total_Software_Sales_Price__c + Total_Software_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Software Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>