force-app/main/default/objects/Quote/recordTypes/Cloud.recordType-meta.xml
<RecordType>
    <fullName>Cloud</fullName>
    <active>true</active>
    <description>Quote for Cloud customers</description>
    <label>Cloud</label>
</RecordType>