force-app/main/default/objects/Quote/recordTypes/Custom.recordType-meta.xml
<RecordType>
    <fullName>Custom</fullName>
    <active>true</active>
    <description>Quote for Custom Development Services</description>
    <label>Custom</label>
</RecordType>