force-app/main/default/objects/Quote/recordTypes/Desktop.recordType-meta.xml
<RecordType>
    <fullName>Desktop</fullName>
    <active>true</active>
    <description>Quote for SalesPad and Business Central Product Suites</description>
    <label>Desktop</label>
</RecordType>