force-app/main/default/objects/Quote/validationRules/Quote_Status_Change_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Status_Change_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(Opportunity.RecordType.DeveloperName = &apos;Cloud&apos;,Opportunity.RecordType.DeveloperName = &apos;Business Central&apos;),
    ISCHANGED(Status),
    OR(
        (TEXT( PRIORVALUE(Status)) = &quot;Draft&quot;),
        (TEXT( PRIORVALUE(Status)) = &quot;Needs Review&quot;),
								(TEXT( PRIORVALUE(Status)) = &quot;In Review&quot;)
    )
)</errorConditionFormula>
    <errorMessage>You cannot change the status until the Quote is Approved</errorMessage>
</ValidationRule>