force-app/main/default/objects/Quote/listViews/Custom_Quotes.listView-meta.xml
<ListView>
    <fullName>Custom_Quotes</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.RECORDTYPE</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>Owner</columns>
    <columns>OPPORTUNITY.OWNER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Draft,Needs Review,In Review,Approved,Rejected,Presented,Accepted,Denied</value>
    </filters>
    <label>Custom Quotes</label>
    <sharedTo>
        <role>Sales_Engineer</role>
        <role>Technical_Sales_Manager</role>
    </sharedTo>
</ListView>